level3-edge/manifests/emqx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emqx-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emqx
  template:
    metadata:
      labels:
        app: emqx
    spec:
      containers:
      - name: emqx
        image: emqx/emqx:5.1.0
        ports:
        - containerPort: 1883
        - containerPort: 18083
---
apiVersion: v1
kind: Service
metadata:
  name: emqx-service
  namespace: default
spec:
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
  - name: dashboard
    port: 18083
    targetPort: 18083
  selector:
    app: emqx
