level3-edge/manifests/streampipes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streampipes
  namespace: default
  labels:
    app: streampipes
spec:
  replicas: 1
  # 20 minutos de tolerancia para permitir descargas de imágenes pesadas en Bogotá
  progressDeadlineSeconds: 1200
  selector:
    matchLabels:
      app: streampipes
  template:
    metadata:
      labels:
        app: streampipes
    spec:
      containers:
      # --- Contenedor 1: Interfaz Web ---
      - name: ui
        image: apachestreampipes/ui:0.93.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
      
      # --- Contenedor 2: Backend Core ---
      - name: backend
        image: apachestreampipes/backend:0.93.0
        imagePullPolicy: IfNotPresent
      - name: connect-worker
        image: apachestreampipes/connect-worker-main:0.93.0
        imagePullPolicy: IfNotPresent
      - name: couchdb
        image: couchdb:3.3.1
        imagePullPolicy: IfNotPresent
      - name: consul
        image: hashicorp/consul:1.15.2
        imagePullPolicy: IfNotPresent
        command: ["consul"]
        args: ["agent", "-dev", "-client", "0.0.0.0"]
---
apiVersion: v1
kind: Service
metadata:
  name: streampipes-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: streampipes
  ports:
  - port: 8082
    targetPort: 80
    nodePort: 30082 # Puerto mapeado en tu localhost de Windows para acceder a la UI
